Issue #2569025 by ptsimard: Pagination last-child span is misaligned

--- a/css/wetkit_bootstrap.styles.css
+++ b/css/wetkit_bootstrap.styles.css
@@ -444,7 +444,8 @@ ul.action-links .glyphicon {
   min-width: initial;
 }
 
-.item-list .pagination > li:first-child > span {
+.item-list .pagination > li:first-child > span,
+.item-list .pagination > li:last-child > span {
   padding: 10px 16px;
 }
 
